# cnn-cgp-compressor

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
cgp/: Assert.h  CGPStream.cpp  CGPStream.h  CMakeLists.txt  Cgp.cpp  Cgp.h  Chromosome.cpp  Chromosome.h  Configuration.cpp  Configuration.h  Dataset.cpp  Dataset.h  Learning.cpp  Learning.h  Main.cpp  Main.h  Model.cpp  Model.h  Stream.cpp  Stream.h  StringTemplate.cpp  StringTemplate.h
cmd/compress/: all_layers.ipynb  compress.py  grid_size.ipynb  injection.ipynb  layer_bypass.ipynb  lenet.ipynb  lenet_channel.ipynb  mobilenet.ipynb  no_input.ipynb  notebook_utils.py  reversed_single_filter.ipynb  single_channel.ipynb  single_filter.ipynb  zero_outter.ipynb
cmd/compress/cgp/: cgp_adapter.py  cgp_configuration.py  test_cgp_adapter.py
cmd/compress/circuit/: extract.py  loader.py  main.py  quantizer.py
cmd/compress/commands/: datastore.py  debug_model.py  evaluate_cgp_model.py  evaluate_model.py  evaluate_model_sensitivity.py  fix_train_stats.py  manager.py  optimize_model.py  optimize_prepare_model.py  quantize_model.py  train_model.py
cmd/compress/commands/factory/: experiment.py
cmd/compress/commands/pbs/: model_metrics_job.sh
cmd/compress/experiments/: experiment.py  job.pbs  manager.py  multi_experiment.py  planner.py  simple_experiment.py
cmd/compress/experiments/all_layers/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/chain/: config.cgp  experiment.py
cmd/compress/experiments/composite/: cli.py  experiment.py
cmd/compress/experiments/grid_size/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/layer_bypass/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/le_selector/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/mobilenet/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/reversed_single_filter/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/single_channel/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/single_filter/: config.cgp  experiment.py
cmd/compress/experiments/single_filter_zero_outter/: cli.py  config.cgp  experiment.py
cmd/compress/experiments/worst_case/: cli.py  config.cgp  experiment.py
cmd/compress/models/: base.py  base_model.py  lenet.py  ptq_quantized_lenet.py  qat_quantized_lenet.py  quant_lenet.py  quantization.py  quantized_model.py  selector.py
cmd/compress/models/adapters/: base.py  lenet.py  mobilenet_adapter.py  model_adapter.py  model_adapter_factory.py  model_adapter_interface.py  ptq_quantized_lenet.py  qat_quantized_lenet.py
cmd/compress/models/datasets/: imagenet.py
cmd/gate_info/: extract.py  main.py
metacentrum/structure/jobs/: compile_cgp.pbs.sh
metacentrum/structure/scripts/: compress.sh  experiment.sh  experiment_backup.sh  experiment_cleaner.sh  experiment_force_backup.sh  experiment_perish.sh  job_backup.sh  job_cleaner.sh  job_perish.sh  missing_jobs.sh  resub.sh  unfinished_jobs.sh
